[package]
name = "ckb-contract-test-fram"
version = "0.1.0"
edition = "2021"


[dependencies]
ckb-testtool = "0.10.2"
serde_json = "1.0"
bytes = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
secp256k1 = { version = "0.28", features = ["rand-std"] }
musig2 = "0.0.11"
sha2 = "0.10"

[dev-dependencies]
ckb-std = "0.15"
bitcoin = { version = "0.31", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2.4"

[dev-dependencies.serde_molecule]
version = "1.0.0"
git = "https://github.com/XuJiandong/serde_molecule.git"
rev = "07f145d"